@startuml "Diagrama Entidad Relación - Sistema Integrado"

skinparam linetype ortho
skinparam class {
    BackgroundColor White
    ArrowColor Black
    BorderColor Black
}

entity "Producto" as producto {
    -id : int <<PK>>
    --
    *nombre : varchar(100)
    *precio : integer(10)
    *precio_compra : integer(10)
    *fecha : timestamp
    *stock : int
    descripcion : varchar(500)
    imagen_ruta : varchar(500)
}

entity "Venta" as venta {
    -id : int <<PK>>
    --
    *fecha : timestamp
    *total : integer(10)
    *ganancia : integer(10)
}

entity "VentasProductos" as ventas_productos {
    -id : int <<PK>>
    --
    *id_venta : int <<FK>>
    *id_producto : int <<FK>>
    *cantidad : int
}

venta ||--o{ ventas_productos : "contiene"
producto ||--o{ ventas_productos : "está en"

note bottom of ventas_productos
    Tabla intermedia para la relación
    muchos a muchos entre VENTA y PRODUCTO
end note